# CFD-Course-Solutions

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/cfdlib/: blas.hpp  fields.hpp  functions.hpp  poisson.cpp  poisson.hpp  real.hpp  solver.hpp  timer.cpp  timer.hpp  vtk-io.cpp  vtk-io.hpp
tests/: CMakeLists.txt  ex1-field1d.cpp  ex1-field2d.cpp  ex1-integration.cpp  ex2_integration.cpp  ex2_solver.cpp  testmain.cpp
